tests/invalid/Assert_Invalid_2.whiley

public method m(int x, int y) -> bool:
    return x < y

public export method test() :
    assert m(10, 20)
